--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -8,46 +8,13 @@
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <tableCellView identifier="degrees" id="a63-cn-NOW" userLabel="degrees">
-            <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="I6W-tz-8MY" userLabel="angle" customClass="StepperTextField">
-                    <rect key="frame" x="0.0" y="-2" width="172" height="19"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="angle" bezelStyle="round" id="S4B-dx-HbG">
-                        <font key="font" metaFont="smallSystem"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="image" keyPath="increase" value="IncreaseStepper"/>
-                        <userDefinedRuntimeAttribute type="image" keyPath="alternateInc" value="AltIncreaseStepper"/>
-                        <userDefinedRuntimeAttribute type="image" keyPath="decrease" value="DecreaseStepper"/>
-                        <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <binding destination="a63-cn-NOW" name="editable" keyPath="objectValue.isEditable" id="M95-l4-w93"/>
-                        <binding destination="a63-cn-NOW" name="value" keyPath="objectValue.value" id="vYb-RM-cXt"/>
-                    </connections>
-                </textField>
-            </subviews>
-            <constraints>
-                <constraint firstItem="I6W-tz-8MY" firstAttribute="leading" secondItem="a63-cn-NOW" secondAttribute="leading" id="5tI-eq-8FN"/>
-                <constraint firstItem="I6W-tz-8MY" firstAttribute="top" secondItem="a63-cn-NOW" secondAttribute="top" id="bKf-bP-43F"/>
-                <constraint firstAttribute="trailing" secondItem="I6W-tz-8MY" secondAttribute="trailing" id="ea9-MQ-sMa"/>
-            </constraints>
-            <connections>
-                <outlet property="textField" destination="I6W-tz-8MY" id="80r-YF-FEQ"/>
-            </connections>
-            <point key="canvasLocation" x="445" y="256.5"/>
-        </tableCellView>
         <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="q6s-Ku-JU0" customClass="StepperTextField">
                     <rect key="frame" x="0.0" y="-2" width="172" height="19"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="double" bezelStyle="round" id="JnF-7H-4bZ">
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="JnF-7H-4bZ">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -72,6 +39,7 @@
             <connections>
                 <outlet property="textField" destination="q6s-Ku-JU0" id="yzm-dT-NHS"/>
             </connections>
+            <point key="canvasLocation" x="436" y="250.5"/>
         </tableCellView>
         <tableCellView identifier="c" id="toe-NG-Bn9" userLabel="c">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
@@ -97,6 +65,7 @@
                 <constraint firstAttribute="trailing" secondItem="YBc-RN-b4y" secondAttribute="trailing" id="WAZ-eH-0YJ"/>
                 <constraint firstItem="YBc-RN-b4y" firstAttribute="leading" secondItem="toe-NG-Bn9" secondAttribute="leading" id="WrL-bb-Q9Q"/>
             </constraints>
+            <point key="canvasLocation" x="436" y="332.5"/>
         </tableCellView>
         <tableCellView identifier="@&quot;NSColor&quot;" id="Nhn-ML-Yi0" userLabel="@&quot;NSColor&quot;">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
@@ -127,7 +96,7 @@
                     <subviews>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="jzj-QV-oE2" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="0.0" y="11" width="87" height="19"/>
-                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" bezelStyle="round" id="TVF-ca-BP1">
+                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="TVF-ca-BP1">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -145,7 +114,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ut6-h1-1dS" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="87" y="11" width="85" height="19"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" bezelStyle="round" id="ZnM-vW-FvB">
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="ZnM-vW-FvB">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -207,7 +176,7 @@
             <connections>
                 <outlet property="textField" destination="jzj-QV-oE2" id="MVN-XN-UTj"/>
             </connections>
-            <point key="canvasLocation" x="445" y="513"/>
+            <point key="canvasLocation" x="436" y="428"/>
         </tableCellView>
         <tableCellView identifier="dddd" id="dHV-ME-csG" userLabel="dddd">
             <rect key="frame" x="0.0" y="0.0" width="172" height="64"/>
@@ -218,7 +187,7 @@
                     <subviews>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="JUl-PQ-ZNn" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="0.0" y="45" width="86" height="19"/>
-                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" bezelStyle="round" id="csH-2R-kMG">
+                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="csH-2R-kMG">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -236,7 +205,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cna-En-eCw" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="86" y="45" width="86" height="19"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" bezelStyle="round" id="OSZ-FZ-1G2">
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="OSZ-FZ-1G2">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -254,7 +223,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="zOj-4l-QUh" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="0.0" y="12" width="86" height="19"/>
-                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" bezelStyle="round" id="i3A-IO-FSZ">
+                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="i3A-IO-FSZ">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -272,7 +241,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="i8P-ab-WKn" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="86" y="12" width="86" height="19"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" bezelStyle="round" id="sVD-ox-hmp">
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="sVD-ox-hmp">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
