--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -8,7 +8,7 @@
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d">
+        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -87,7 +87,7 @@
             </constraints>
             <point key="canvasLocation" x="726" y="371.5"/>
         </tableCellView>
-        <tableCellView identifier="dd" id="GbV-qK-Vp4" userLabel="dd">
+        <tableCellView identifier="dd" id="GbV-qK-Vp4" userLabel="dd" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -178,7 +178,7 @@
             </connections>
             <point key="canvasLocation" x="436" y="428"/>
         </tableCellView>
-        <tableCellView identifier="dddd" id="dHV-ME-csG" userLabel="dddd">
+        <tableCellView identifier="dddd" id="dHV-ME-csG" userLabel="dddd" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
