--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -37,6 +37,7 @@
                 <constraint firstItem="q6s-Ku-JU0" firstAttribute="leading" secondItem="f3Z-oW-3C9" secondAttribute="leading" id="mUG-Wk-Vu9"/>
             </constraints>
             <connections>
+                <outlet property="_popover" destination="ch3-SY-J2e" id="EwJ-Xd-rqh"/>
                 <outlet property="textField" destination="q6s-Ku-JU0" id="yzm-dT-NHS"/>
             </connections>
             <point key="canvasLocation" x="436" y="250.5"/>
@@ -337,6 +338,37 @@
             </connections>
             <point key="canvasLocation" x="726" y="274"/>
         </tableCellView>
+        <customView id="dob-0O-PCo" userLabel="Popover">
+            <rect key="frame" x="0.0" y="0.0" width="100" height="54"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="glV-MS-jQN">
+                    <rect key="frame" x="18" y="20" width="64" height="14"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Popover" id="DY0-eW-vjs">
+                        <font key="font" metaFont="smallSystem"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+            </subviews>
+            <constraints>
+                <constraint firstItem="glV-MS-jQN" firstAttribute="leading" secondItem="dob-0O-PCo" secondAttribute="leading" constant="20" symbolic="YES" id="ASq-hc-aMH"/>
+                <constraint firstAttribute="trailing" secondItem="glV-MS-jQN" secondAttribute="trailing" constant="20" symbolic="YES" id="DQC-9A-iQj"/>
+                <constraint firstAttribute="bottom" secondItem="glV-MS-jQN" secondAttribute="bottom" constant="20" symbolic="YES" id="II6-d8-FXe"/>
+                <constraint firstItem="glV-MS-jQN" firstAttribute="top" secondItem="dob-0O-PCo" secondAttribute="top" constant="20" symbolic="YES" id="jsN-Nn-KA1"/>
+            </constraints>
+            <point key="canvasLocation" x="436" y="524"/>
+        </customView>
+        <viewController id="Nuf-d3-4cB" userLabel="Popover View Controller">
+            <connections>
+                <outlet property="view" destination="dob-0O-PCo" id="RaA-5a-Wi5"/>
+            </connections>
+        </viewController>
+        <popover id="ch3-SY-J2e">
+            <connections>
+                <outlet property="contentViewController" destination="Nuf-d3-4cB" id="dDf-N7-ObG"/>
+            </connections>
+        </popover>
     </objects>
     <resources>
         <image name="AltDecreaseStepper" width="11" height="13"/>
