--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -8,13 +8,13 @@
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d">
+        <tableCellView identifier="d" id="f3Z-oW-3C9" userLabel="d" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="17"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="q6s-Ku-JU0" customClass="StepperTextField">
                     <rect key="frame" x="0.0" y="-2" width="172" height="19"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="JnF-7H-4bZ">
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" placeholderString="Value" bezelStyle="round" id="JnF-7H-4bZ">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -37,6 +37,7 @@
                 <constraint firstItem="q6s-Ku-JU0" firstAttribute="leading" secondItem="f3Z-oW-3C9" secondAttribute="leading" id="mUG-Wk-Vu9"/>
             </constraints>
             <connections>
+                <outlet property="_popover" destination="ch3-SY-J2e" id="EwJ-Xd-rqh"/>
                 <outlet property="textField" destination="q6s-Ku-JU0" id="yzm-dT-NHS"/>
             </connections>
             <point key="canvasLocation" x="436" y="250.5"/>
@@ -87,7 +88,7 @@
             </constraints>
             <point key="canvasLocation" x="726" y="371.5"/>
         </tableCellView>
-        <tableCellView identifier="dd" id="GbV-qK-Vp4" userLabel="dd">
+        <tableCellView identifier="dd" id="GbV-qK-Vp4" userLabel="dd" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -96,7 +97,7 @@
                     <subviews>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="jzj-QV-oE2" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="0.0" y="11" width="87" height="19"/>
-                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="TVF-ca-BP1">
+                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" placeholderString="Value" bezelStyle="round" id="TVF-ca-BP1">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -114,7 +115,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ut6-h1-1dS" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="87" y="11" width="85" height="19"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="ZnM-vW-FvB">
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" placeholderString="Value" bezelStyle="round" id="ZnM-vW-FvB">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -178,7 +179,7 @@
             </connections>
             <point key="canvasLocation" x="436" y="428"/>
         </tableCellView>
-        <tableCellView identifier="dddd" id="dHV-ME-csG" userLabel="dddd">
+        <tableCellView identifier="dddd" id="dHV-ME-csG" userLabel="dddd" customClass="TableCellView">
             <rect key="frame" x="0.0" y="0.0" width="172" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -187,7 +188,7 @@
                     <subviews>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="JUl-PQ-ZNn" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="0.0" y="45" width="86" height="19"/>
-                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="csH-2R-kMG">
+                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" placeholderString="Value" bezelStyle="round" id="csH-2R-kMG">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -205,7 +206,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cna-En-eCw" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="86" y="45" width="86" height="19"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="OSZ-FZ-1G2">
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" placeholderString="Value" bezelStyle="round" id="OSZ-FZ-1G2">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -223,7 +224,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="zOj-4l-QUh" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="0.0" y="12" width="86" height="19"/>
-                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="i3A-IO-FSZ">
+                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" placeholderString="Value" bezelStyle="round" id="i3A-IO-FSZ">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -241,7 +242,7 @@
                         </textField>
                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="i8P-ab-WKn" userLabel="Value" customClass="StepperTextField">
                             <rect key="frame" x="86" y="12" width="86" height="19"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" title="Value" bezelStyle="round" id="sVD-ox-hmp">
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="center" placeholderString="Value" bezelStyle="round" id="sVD-ox-hmp">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -337,6 +338,37 @@
             </connections>
             <point key="canvasLocation" x="726" y="274"/>
         </tableCellView>
+        <customView id="dob-0O-PCo" userLabel="Error">
+            <rect key="frame" x="0.0" y="0.0" width="100" height="54"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="glV-MS-jQN">
+                    <rect key="frame" x="18" y="20" width="64" height="14"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Error" id="DY0-eW-vjs">
+                        <font key="font" metaFont="smallSystem"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+            </subviews>
+            <constraints>
+                <constraint firstItem="glV-MS-jQN" firstAttribute="leading" secondItem="dob-0O-PCo" secondAttribute="leading" constant="20" symbolic="YES" id="ASq-hc-aMH"/>
+                <constraint firstAttribute="trailing" secondItem="glV-MS-jQN" secondAttribute="trailing" constant="20" symbolic="YES" id="DQC-9A-iQj"/>
+                <constraint firstAttribute="bottom" secondItem="glV-MS-jQN" secondAttribute="bottom" constant="20" symbolic="YES" id="II6-d8-FXe"/>
+                <constraint firstItem="glV-MS-jQN" firstAttribute="top" secondItem="dob-0O-PCo" secondAttribute="top" constant="20" symbolic="YES" id="jsN-Nn-KA1"/>
+            </constraints>
+            <point key="canvasLocation" x="436" y="524"/>
+        </customView>
+        <viewController id="Nuf-d3-4cB" userLabel="Popover View Controller">
+            <connections>
+                <outlet property="view" destination="dob-0O-PCo" id="RaA-5a-Wi5"/>
+            </connections>
+        </viewController>
+        <popover id="ch3-SY-J2e">
+            <connections>
+                <outlet property="contentViewController" destination="Nuf-d3-4cB" id="dDf-N7-ObG"/>
+            </connections>
+        </popover>
     </objects>
     <resources>
         <image name="AltDecreaseStepper" width="11" height="13"/>
