--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -159,7 +159,7 @@
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="3fy-Ty-hse">
-                                                            <rect key="frame" x="3" y="6" width="77" height="14"/>
+                                                            <rect key="frame" x="3" y="5" width="77" height="14"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Class" id="0qY-r9-dez">
                                                                 <font key="font" metaFont="smallSystemBold"/>
                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -172,7 +172,7 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="3fy-Ty-hse" secondAttribute="trailing" id="2d1-aV-pOT"/>
-                                                        <constraint firstItem="3fy-Ty-hse" firstAttribute="top" secondItem="yfL-tc-DAf" secondAttribute="top" id="jeX-kZ-yTx"/>
+                                                        <constraint firstAttribute="top" secondItem="3fy-Ty-hse" secondAttribute="bottom" constant="-15" id="jeX-kZ-yTx"/>
                                                         <constraint firstItem="3fy-Ty-hse" firstAttribute="leading" secondItem="yfL-tc-DAf" secondAttribute="leading" constant="5" id="pJV-YD-vHC"/>
                                                     </constraints>
                                                     <connections>
@@ -184,7 +184,7 @@
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="XZg-ys-F6V">
-                                                            <rect key="frame" x="4" y="3" width="70" height="14"/>
+                                                            <rect key="frame" x="12" y="4" width="62" height="14"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="left" title="expandable" id="rkw-uf-tbh">
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -201,8 +201,8 @@
                                                         </textField>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="top" secondItem="XZg-ys-F6V" secondAttribute="bottom" constant="-17" id="9QJ-cr-O6a"/>
-                                                        <constraint firstItem="XZg-ys-F6V" firstAttribute="leading" secondItem="M03-u6-Cp5" secondAttribute="leading" constant="6" id="gzU-Ja-nbj"/>
+                                                        <constraint firstAttribute="top" secondItem="XZg-ys-F6V" secondAttribute="bottom" constant="-16" id="9QJ-cr-O6a"/>
+                                                        <constraint firstItem="XZg-ys-F6V" firstAttribute="leading" secondItem="M03-u6-Cp5" secondAttribute="leading" constant="14" id="gzU-Ja-nbj"/>
                                                         <constraint firstAttribute="trailing" secondItem="XZg-ys-F6V" secondAttribute="trailing" constant="6" id="hex-ko-8Gh"/>
                                                     </constraints>
                                                     <connections>
